deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-express-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-express
  template:
    metadata:
      labels: 
        app: k8s-express  
    spec:                  
      containers: 
      - name: k8s-express 
        image: sudiptog81/k8s-express:1.0.0 
        ports:
        - containerPort: 3000
