service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-express-svc
spec:
  ports:
    - name: k8s-express-svc
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: k8s-express
  type: LoadBalancer
